syntax = "proto3";

package calculator;

message AvgRequest {
    int32 request_number = 1;
}

message AvgResponse {
    double result = 1;
}
