syntax = "proto3";

package calculator;

message PrimeRequest {
    int32 request_number = 1;
}

message PrimeResponse {
    int32 result = 1;
}
